fix home on safari

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -446,6 +446,10 @@ ul {
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); 
   text-align: center; 
 }
@@ -460,6 +464,10 @@ ul {
   position: absolute;
   bottom: 30px;
   left: 50%;
+  -webkit-transform: translate(-50%, 0);
+  -moz-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
   transform: translate(-50%, 0); 
   text-align: center; 
 }
@@ -468,6 +476,10 @@ ul {
   position: absolute;
   bottom: 30%;
   left: 50%;
+  -webkit-transform: translate(-50%, 0);
+  -moz-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
   transform: translate(-50%, 0); 
   text-align: center; 
 }
